--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,12 @@
   text-decoration: line-through;
   color: red;
 }
+
+#board p {
+  border-bottom: 2px solid black;
+  margin: 10px;
+  height: 50px;
+  width: 25px;
+  display: block;
+  float: left;
+}
