--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 .container {
-  max-width: 60%;
+  max-width: 85%;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
 }
 
 .alpha {
